welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: not found: type j
    setCouleurBrosse(tab[j]);
                         ^Array1:13: error: variable tab of type Array[java.awt.Color] does not take type parameters.
    setCouleurBrosse(tab[j]);
                        ^