welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var taille=getMondeHauteur()
  var tab = new Array[Color] (taille)
  for (i <- 0 to taille-1) {
    tab(i) = getCouleurSol
    avance()
  }
  gauche();
  avance();
  droite();
  for (j <- 0 to taille-1) {
    setCouleurBrosse(tab[j]);
    baisseBrosse();
    avance();
  }
}